--- a/style.css
+++ b/style.css
@@ -69,3 +69,50 @@ nav{
 span{
     color: #fc604d;
 }
+
+.main img {
+    position: absolute;
+    right: 14%;
+    top: 20%;
+    width: 440px;
+    height: auto;
+}
+
+.main .text{
+    position: absolute;
+    top: 35%;
+    left: 12%;
+}
+
+.text h4{
+    font-size: 60px;
+    color: #313539;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.text h2{
+    font-size: 140px;
+    color: #fc604d;
+    font-weight: 900;
+    line-height: 1;
+    margin-bottom: 25px;
+}
+
+.text p{
+    color: #333;
+    font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 25px;
+}
+
+.icon i{
+    margin-right: 20px;
+    font-size: 25px;
+    color: #98aab9;
+    transition: .6s;
+}
+
+.icon i:hover{
+    transform: scale(1.1)
+}
